[gd_scene load_steps=4 format=2]

[ext_resource path="res://town/GenMap.gd" type="Script" id=1]
[ext_resource path="res://assets/ModerateTileSet.tres" type="TileSet" id=2]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=3]

[node name="GenMap" type="Node2D"]
script = ExtResource( 1 )

[node name="Base" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Obstacles" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Canopy" type="TileMap" parent="."]
z_index = 10
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="StructureTemplates" type="Node2D" parent="."]
visible = false

[node name="Default" type="Node2D" parent="StructureTemplates"]
visible = false

[node name="Obstacles" type="TileMap" parent="StructureTemplates/Default"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 20, 196608 )
__meta__ = {
"_edit_lock_": true
}

[node name="Structure01" type="Node2D" parent="StructureTemplates"]
visible = false

[node name="Ground" type="TileMap" parent="StructureTemplates/Structure01"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 262146, 21, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Portals" type="TileMap" parent="StructureTemplates/Structure01"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 262146, 16, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Obstacles" type="TileMap" parent="StructureTemplates/Structure01"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 65536, 18, 0, 65537, 18, 0, 65538, 18, 0, 65539, 18, 0, 65540, 18, 0, 131072, 18, 0, 131073, 18, 0, 131074, 18, 0, 131075, 18, 0, 131076, 18, 0, 196608, 18, 0, 196609, 18, 0, 196610, 18, 0, 196611, 18, 0, 196612, 18, 0, 262144, 18, 0, 262145, 18, 0, 262147, 18, 0, 262148, 18, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Canopy" type="TileMap" parent="StructureTemplates/Structure01"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -65536, 15, 0, -65535, 15, 65540, -65534, 15, 65541, -65533, 15, 65542, -65532, 15, 1, 0, 15, 65536, 1, 15, 65540, 2, 15, 65541, 3, 15, 65542, 4, 15, 65537, 65536, 15, 196611, 65537, 15, 65540, 65538, 15, 65541, 65539, 15, 65542, 65540, 15, 65537, 131072, 15, 131072, 131073, 15, 65538, 131074, 15, 65538, 131075, 15, 65538, 131076, 15, 131073, 196609, 19, 327684, 196611, 19, 327684, 262144, 19, 327684, 262145, 19, 327684, 262147, 19, 327684, 262148, 19, 327684 )
__meta__ = {
"_edit_lock_": true
}

[node name="Structure03" type="Node2D" parent="StructureTemplates"]
visible = false

[node name="Ground" type="TileMap" parent="StructureTemplates/Structure03"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131073, 21, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Portals" type="TileMap" parent="StructureTemplates/Structure03"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131073, 16, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Obstacles" type="TileMap" parent="StructureTemplates/Structure03"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 65536, 18, 0, 65537, 18, 0, 65538, 18, 0, 131072, 18, 0, 131074, 18, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Canopy" type="TileMap" parent="StructureTemplates/Structure03"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -65536, 15, 0, -65535, 15, 65540, -65534, 15, 1, 0, 15, 65536, 1, 15, 65540, 2, 15, 65537, 65536, 15, 131072, 65537, 15, 65538, 65538, 15, 131073, 131072, 19, 65538, 131074, 19, 65538 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 256, 192 )
